fixing spacing issues in the footer

--- a/sharedStyles.css
+++ b/sharedStyles.css
@@ -121,7 +121,9 @@ footer .social-links
         align-items: center;
         justify-content: center;
     }
-    
+    footer > *:not(:last-child) {
+        margin-bottom: 3.03rem;
+    }
     footer .footer-nav {
         display: flex;
         flex-direction: column;
@@ -134,6 +136,7 @@ footer .social-links
         justify-self: center;
     }
     footer .footer-menu li:not(:last-child) {
+        margin-bottom: 1.5rem;
         margin-right: 0;
     }
 }
